# chess-position-recognition

./: .gitignore  README.md  article.md  cpr.py  fig.py  flake.nix  justfile  pyproject.toml  yrs.py  zensical.toml
.github/: dependabot.yml
docs/: architecture.md  development.md  index.md  roadmap.md  spec.md  structure.md
presentation/: chess-position-recognition.tex
src/fip/: preprocess.py
src/tif/: download.py  evaluate.py  features.py  plots.py  preprocess.py  train.py  utils.py
src/turkish_inflation_forecasting/: pipeline.py
src/turkish_inflation_forecasting/entrypoints/: download.py  evaluate.py  features.py  plots.py  preprocess.py  run.py  train.py
tests/: test_config.py  test_entrypoints.py  test_evaluate.py  test_train.py
